--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,27 +18,32 @@ h1 {
   font-family: myfont;
   color: red;
   width: fit-content;
-  overflow: hidden; 
-  border-right: .15em solid orange; 
-  white-space: nowrap; 
-  margin: 0 auto; 
-  letter-spacing: .15em; 
-  animation: 
-    typing 3s steps(30, end),
-    blink-caret .5s step-end infinite;
+  overflow: hidden;
+  border-right: 0.15em solid orange;
+  white-space: nowrap;
+  margin: 0 auto;
+  letter-spacing: 0.15em;
+  animation: typing 3s steps(30, end), blink-caret 0.5s step-end infinite;
 }
 
-
 @keyframes typing {
-    from { width: 0 }
-    to { width: 100% }
+  from {
+    width: 0%;
   }
-  
+  to {
+    width: 100%;
+  }
+}
 
-  @keyframes blink-caret {
-    from, to { border-color: transparent }
-    50% { border-color: orange }
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
   }
+  50% {
+    border-color: orange;
+  }
+}
 
 h1,
 .center {
@@ -79,7 +84,6 @@ I {
   display: block;
   font-size: 50px;
   text-align: center;
-  
 }
 
 a {
@@ -96,56 +100,53 @@ a {
   border-radius: 15px;
 }
 .VID {
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
-    font-style: italic;
-    font-size: 20px;
-    font-weight: bold;
-    background-color: antiquewhite;
-    width: fit-content;
-    color: #9b4646;
-    text-decoration: none;
-    border-radius: 15px;
-    
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  font-style: italic;
+  font-size: 20px;
+  font-weight: bold;
+  background-color: antiquewhite;
+  width: fit-content;
+  color: #9b4646;
+  text-decoration: none;
+  border-radius: 15px;
 }
 
 .H11 {
-    background-color: antiquewhite; 
-    font-size: 40px;
-    width: fit-content; 
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
-    font-style: italic; 
-    color: #9b4646; 
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 15px;
-
+  background-color: antiquewhite;
+  font-size: 40px;
+  width: fit-content;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-style: italic;
+  color: #9b4646;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 15px;
 }
 
 .VID1 {
-width: 420;
-height: 315;
-display: block;
-margin-left: auto;
-margin-right: auto;
-border-width: 20px;
-border-color: #9b4646;
-border-radius: 15px;
+  width: 420;
+  height: 315;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border-width: 20px;
+  border-color: #9b4646;
+  border-radius: 15px;
 }
 
 .MAIL {
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
-    font-style: italic;
-    font-size: 20px;
-    font-weight: bold;
-    background-color: antiquewhite;
-    width: fit-content;
-    color: #9b4646;
-    text-decoration: none;
-    border-radius: 15px;
-    
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  font-style: italic;
+  font-size: 20px;
+  font-weight: bold;
+  background-color: antiquewhite;
+  width: fit-content;
+  color: #9b4646;
+  text-decoration: none;
+  border-radius: 15px;
 }
